<resources>
    <string name="app_name">Calc</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!--Operator buttons -->
    <string name="btn_brace_left">(</string>
    <string name="btn_brace_right">)</string>
    <string name="btn_op_plus">+</string>
    <string name="btn_op_minus">-</string>
    <string name="btn_op_multiply">\u00D7</string>
    <string name="btn_op_divide">\u00F7</string>
    <string name="btn_backspace">\u140A</string>
    <string name="btn_answer">=</string>
    <string name="btn_num_7">7</string>
    <string name="btn_num_8">8</string>
    <string name="btn_num_9">9</string>
    <string name="btn_num_4">4</string>
    <string name="btn_num_5">5</string>
    <string name="btn_num_6">6</string>
    <string name="btn_num_1">1</string>
    <string name="btn_num_2">2</string>
    <string name="btn_num_3">3</string>
    <string name="btn_num_0">0</string>
    <string name="btn_decimal">.</string>
    <string name="btn_cos">cos</string>
    <string name="btn_sin">sin</string>
    <string name="btn_tan">tan</string>
    <string name="btn_pi">\u03C0</string>
    <string name="btn_exp_a">e\u1D43</string>
    <string name="btn_ln">ln</string>
    <string name="btn_log">log</string>
    <string name="btn_exp">e</string>
    <string name="btn_sqrt">\u221Ax</string>
    <string name="btn_pow_2">x\u00B2</string>
    <string name="btn_rt_x">\u1D43\u221Ax</string>
    <string name="btn_pow_a">x\u1D43</string>
    <string name="btn_percent">%</string>
</resources>