<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/mainButtons"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="true"
        android:orientation="horizontal"
        tools:showIn="@layout/activity_main">

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btnBracketLeft"
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/btn_brace_left" />

                <Button
                    android:id="@+id/btnBracketRight"
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/btn_brace_right" />

                <Button
                        android:id="@+id/btnPercent"
                        style="@style/Button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/btn_percent"
                        android:gravity="clip_horizontal|clip_vertical|center_horizontal|center_vertical" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btnNum7"
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/btn_num_7" />

                <Button
                    android:id="@+id/btnNum8"
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/btn_num_8" />

                <Button
                    android:id="@+id/btnNum9"
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/btn_num_9" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btnNum4"
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/btn_num_4" />

                <Button
                    android:id="@+id/btnNum5"
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/btn_num_5" />

                <Button
                    android:id="@+id/btnNum6"
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/btn_num_6" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btnNum1"
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/btn_num_1" />

                <Button
                    android:id="@+id/btnNum2"
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/btn_num_2" />

                <Button
                    android:id="@+id/btnNum3"
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/btn_num_3" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btnNum0"
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/btn_num_0" />

                <Button
                    android:id="@+id/btnDecimal"
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/btn_decimal" />

                <Button
                    android:id="@+id/btnAnswer"
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/btn_answer" />

            </TableRow>
        </TableLayout>

        <LinearLayout
            android:id="@+id/operatorsLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                    android:id="@+id/btnBackspace"
                    style="@style/Button.Operator"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/btn_backspace" />

            <Button
                    android:id="@+id/btnOpPlus"
                    style="@style/Button.Operator"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/btn_op_plus" />

            <Button
                    android:id="@+id/btnOpMinus"
                    style="@style/Button.Operator"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/btn_op_minus" />

            <Button
                    android:id="@+id/btnOpMultiply"
                    style="@style/Button.Operator"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/btn_op_multiply" />

            <Button
                android:id="@+id/btnOpDivide"
                style="@style/Button.Operator"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_op_divide" />
        </LinearLayout>
    </LinearLayout>
</layout>