<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/functionButtons"
        style="@style/Container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="@+id/btnSin"
        app:layout_constraintStart_toEndOf="@+id/btnSin">


        <Button
            android:id="@+id/btnCos"
            style="@style/Button.Function"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_box"
            android:text="@string/btn_cos"
            app:layout_constraintBottom_toTopOf="@+id/btnExp"
            app:layout_constraintEnd_toStartOf="@+id/btnSin"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="219dp"
            tools:layout_conversion_absoluteWidth="103dp" />

        <Button
            android:id="@+id/btnSin"
            style="@style/Button.Function"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_box"
            android:text="@string/btn_sin"
            app:layout_constraintBottom_toTopOf="@+id/btnExpA"
            app:layout_constraintEnd_toStartOf="@+id/btnTan"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnCos"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="219dp"
            tools:layout_conversion_absoluteWidth="103dp" />

        <Button
            android:id="@+id/btnTan"
            style="@style/Button.Function"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_box"
            android:text="@string/btn_tan"
            app:layout_constraintBottom_toTopOf="@+id/btnLog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnSin"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="219dp"
            tools:layout_conversion_absoluteWidth="103dp" />


        <Button
            android:id="@+id/btnPi"
            style="@style/Button.Function"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_box"
            android:text="@string/btn_pi"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLn"
            tools:layout_conversion_absoluteHeight="219dp"
            tools:layout_conversion_absoluteWidth="103dp" />

        <Button
            android:id="@+id/btnExp"
            style="@style/Button.Function"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_box"
            android:text="@string/btn_exp"
            app:layout_constraintBottom_toTopOf="@+id/btnSqrt"
            app:layout_constraintEnd_toStartOf="@+id/btnExpA"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnCos"
            tools:layout_conversion_absoluteHeight="219dp"
            tools:layout_conversion_absoluteWidth="103dp" />

        <Button
            android:id="@+id/btnExpA"
            style="@style/Button.Function"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_box"
            android:text="@string/btn_exp_a"
            app:layout_constraintBottom_toTopOf="@+id/btnLn"
            app:layout_constraintEnd_toStartOf="@+id/btnLog"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnExp"
            app:layout_constraintTop_toBottomOf="@+id/btnSin"
            tools:layout_conversion_absoluteHeight="219dp"
            tools:layout_conversion_absoluteWidth="103dp" />

        <Button
            android:id="@+id/btnLog"
            style="@style/Button.Function"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_box"
            android:text="@string/btn_log"
            app:layout_constraintBottom_toTopOf="@+id/btnPowA"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnExpA"
            app:layout_constraintTop_toBottomOf="@+id/btnTan"
            tools:layout_conversion_absoluteHeight="219dp"
            tools:layout_conversion_absoluteWidth="103dp" />


        <Button
            android:id="@+id/btnLn"
            style="@style/Button.Function"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_box"
            android:text="@string/btn_ln"
            app:layout_constraintBottom_toTopOf="@+id/btnPi"
            app:layout_constraintEnd_toStartOf="@+id/btnPowA"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnSqrt"
            app:layout_constraintTop_toBottomOf="@+id/btnExpA"
            tools:layout_conversion_absoluteHeight="219dp"
            tools:layout_conversion_absoluteWidth="103dp" />

        <Button
            android:id="@+id/btnSqrt"
            style="@style/Button.Function"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_box"
            android:text="@string/btn_sqrt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnLn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnExp"
            tools:layout_conversion_absoluteHeight="220dp"
            tools:layout_conversion_absoluteWidth="206dp" />

        <Button
            android:id="@+id/btnPowA"
            style="@style/Button.Function"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_box"
            android:text="@string/btn_pow_a"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnLn"
            app:layout_constraintTop_toBottomOf="@+id/btnLog"
            tools:layout_conversion_absoluteHeight="220dp"
            tools:layout_conversion_absoluteWidth="206dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>